# SmartHub

./: .gitignore  compose-local.yaml  compose.yaml  pyproject.toml  q1.md
alembic/: env.py
alembic/versions/: b2c18d9b4f45_initial_migration.py
smarthub/: main.py  settings.py
smarthub/api/: router.py
smarthub/db/: connector.py  db.py  models.py
smarthub/mqtt/: mqtt_client.py  mqtt_messages.py
smarthub/repositories/: user_repository.py
smarthub/scripts/: createuser.py
smarthub/services/: admin.py  auth.py  devices.py
smarthub/tests/: conftest.py
smarthub/tests/auth/: test_auth.py
